Implemented new capabilities to subtype alcohol and flavour beer
